Record the JVM flag sweep as a negative result
Four server JVMs, two runs of the same ladder, and an ordering that reverses
between them: the stock JVM is the worst of the four in one run and the best in
the other. The earlier reading of a 26x win from sizing the heap was one bad
stock run and is withdrawn.

8,000 a second was the wrong rate to compare at. It is the knee, where a queue
is bistable and very little decides whether it drains or grows, so the
comparison measured the coin flip. Below the knee all four configurations land
within 561-737us and cannot be separated by two samples.

The profile already implied this: heap and collector settings do not change how
much CPU it takes to encode a string, and encoding is three quarters of the
samples. Kept because a negative result with a mechanism is worth more than an
untried idea, and because the next person to reach for GC flags here should
find this first.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HJ4HeBm8uRttcrSRHuScbn